#235: add o:inputFile maxsize and built-in validation on maxsize+accept

--- a/src/main/resources/org/omnifaces/messages.properties
+++ b/src/main/resources/org/omnifaces/messages.properties
@@ -1,3 +1,6 @@
+org.omnifaces.component.input.InputFile.accept={0}: Media type of file ''{1}'' does not match ''{2}''
+org.omnifaces.component.input.InputFile.maxsize={0}: Size of file ''{1}'' is larger than maximum of {2}
+
 org.omnifaces.component.validator.ValidateAll={0}: Please fill out all of those fields
 org.omnifaces.component.validator.ValidateAllOrNone={0}: Please fill out all or none of those fields
 org.omnifaces.component.validator.ValidateEqual={0}: Please fill out the same value for all of those fields
