Fix #564: o:validateBean wasn't respecting BeanValidator.MESSAGE

--- a/src/test/resources/messages.properties
+++ b/src/test/resources/messages.properties
@@ -11,4 +11,4 @@
 # specific language governing permissions and limitations under the License.
 #
 
-javax.faces.validator.BeanValidator.MESSAGE={0}
+javax.faces.validator.BeanValidator.MESSAGE={1}: {0}
